--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-Login==0.6.3
-Flask-WTF==1.2.1
-WTForms==3.1.1
+alembic==1.15.1
+blinker==1.9.0
+click==8.1.8
+dnspython==2.7.0
 email-validator==2.1.0
-python-dotenv==1.0.0
-gunicorn==21.2.0
-psycopg2-binary==2.9.9
+Flask==2.3.3
 Flask-Assets==2.1.0
+Flask-Login==0.6.3
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.1.1
+gunicorn==21.2.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.9
+MarkupSafe==3.0.2
+packaging==24.2
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+SQLAlchemy==2.0.39
+typing_extensions==4.12.2
+webassets==2.0
 Werkzeug==2.3.7
+WTForms==3.1.1
